#93 allow override of publish_date
This is necessary for migration because we would like to preserve the original publish dates of the posts being migrated.
